--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
                 <li>
                     <a href="about_me.html">About Me</a>
                 </li>
-                <li></li>
-                <li></li>
+                <li>
+                    <a href="projects.html">Projects</a>
+                </li>
+                <li>
+                    <a href="skills.html">Skills</a>
+                </li>
                 <li></li>
                 <li></li>
                 <li></li>
