--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                 <li>
                     <a href="skills.html">Skills</a>
                 </li>
-                <li></li>
+                <li>
+                    <a href="articles.html">Cable Tech Chronicles</a>
+                </li>
                 <li></li>
                 <li></li>
                 <li></li>
