--- a/skills.html
+++ b/skills.html
@@ -22,12 +22,12 @@
         </tr>
         <tr>
             <td>JavaScript</td>
-            <td>Beginner</td>
+            <td>Novice</td>
             <td>1</td>
         </tr>
         <tr>
             <td>Python</td>
-            <td>Beginner</td>
+            <td>Novice</td>
             <td>1</td>
         </tr>
         <tr>
