--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
         <title>Portfolio Landing</title>
     </head>
     <body>
-        <!-- Centered main header -->
         <center>
             <h1>Home Page</h1>
         </center>
         
-        <!-- Centered article with image and welcome message -->
     
         <center>
             <strong>Welcome to my Landing Page</strong>
             <br>
-            <!-- Image with specified width and height -->
             <img src="photo/IMG_1220.jpg" alt="Myself after graduating AIT in 2017" style="width: 200px; height: 200px;">
 
             <p>
@@ -50,10 +47,14 @@
                 <li>
                     <a href="articles.html">Cable Tech Chronicles</a>
                 </li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>
+                    <a href="demonstrations.html">Demonstrations</a>
+                </li>
+                    <a href="contact.html">Contact Information</a>
             </ul>
         </nav>
+        <footer>
+            <p>&copy; 2024 Alton Smith II. All rights reserved.</p>
+        </footer>
     </body>
 </html>
