--- a/about_me.html
+++ b/about_me.html
@@ -4,36 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="stylesheet" href="about_me.css">
 </head>
 <body>
-    <center>
-        <h1>About ME</h1>
-    </center>
-     <p>
-        <h2><u>Personal Interests</u></h2>
-        <ul>
-            <li>Anime</li>
-            <li>Video Games</li>
-            <li>Sports *Baketball is favorite*</li>
-            <li>I LOVE Honey Buns *Iced*</li>
-            <li>Music for sure, its mad groovy</li>
-            <li>Dancing but I can't the music just takes me</li>
-        </ul>
-     </p>
+    <div class="container">
+        <header class="header">
+            <h1>About Me</h1>
+        </header>
 
-     <p>
-        <h2><u>Career Goals</u></h2>
-        <pre>
-    I really don't have any specific goals in mind;
-    I have always wanted to work with computers.
-    I was in IT in the Army and tried college for computer science,
-    but I went into reserves and needed money,
-    so I sadly dropped out.
-    
-    Now, the field is calling me again, and it has been for a while.
-    I am fulfilling my younger selfs dream and pursuing this goal for us.
-    Looking back, I have always wanted to work for IBM or Google by the end of it all.
-        </pre>
-     </p>
+        <main class="main-content">
+            <section class="personal-interests">
+                <h2>Personal Interests</h2>
+                <ul>
+                    <li>Anime</li>
+                    <li>Video Games</li>
+                    <li>Sports (Basketball is a favorite)</li>
+                    <li>I LOVE Honey Buns (Iced)</li>
+                    <li>Music for sure, it's mad groovy</li>
+                    <li>Dancing, but I can't; the music just takes me</li>
+                </ul>
+            </section>
+
+            <section class="career-goals">
+                <h2>Career Goals</h2>
+                <p>
+                    I really don't have any specific goals in mind; I have always wanted to work with computers.
+                    I was in IT in the Army and tried college for computer science, but I went into reserves and 
+                    needed money, so I sadly dropped out. Now, the field is calling me again, and it has been for
+                    a while. I am fulfilling my younger self's dream and pursuing this goal for us.
+                </p>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
