--- a/projects.html
+++ b/projects.html
@@ -4,29 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <link rel="stylesheet" href="projects.css">
 </head>
 <body>
-    <center>
+    <div class="main-container">
         <h1><u>Projects</u></h1>
         <nav>
-            <table border="10">
-                <tr>
-                    <td>
-                        <a href="https://github.com/SmittyDeuce/toDoList.git">To Do List</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="https://github.com/SmittyDeuce/Oct-guessing-game.git">Word Guessing Game</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="https://github.com/SmittyDeuce/contact_mangement.git">Contact Management</a>
-                    </td>
-                </tr>
-            </table>
+            <ul class="project-list">
+                <li><a href="https://github.com/SmittyDeuce/toDoList.git">To Do List</a></li>
+                <li><a href="https://github.com/SmittyDeuce/Oct-guessing-game.git">Word Guessing Game</a></li>
+                <li><a href="https://github.com/SmittyDeuce/contact_mangement.git">Contact Management</a></li>
+            </ul>
         </nav>
-    </center>
+    </div>
 </body>
 </html>
