--- a/skills.html
+++ b/skills.html
@@ -4,53 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skills</title>
+    <link rel="stylesheet" href="skills.css">
 </head>
 <body>
-    <center>
+    <div class="main-container">
         <h1><u>Skills</u></h1>
- 
-    <table border="10">
-        <tr>
-            <th>Technolgy</th>
-            <th>Proficiency</th>
-            <th>Years of Experience</th>
-        </tr>
-        <tr>
-            <td>HTML/CSS</td>
-            <td>Beginner</td>
-            <td>1</td>
-        </tr>
-        <tr>
-            <td>JavaScript</td>
-            <td>Novice</td>
-            <td>1</td>
-        </tr>
-        <tr>
-            <td>Python</td>
-            <td>Novice</td>
-            <td>1</td>
-        </tr>
-        <tr>
-            <td>Coax Termination</td>
-            <td>Pro</td>
-            <td>4</td>
-        </tr>
-        <tr>
-            <td>Fiber Termination</td>
-            <td>Advanced</td>
-            <td>2</td>
-        </tr>
-        <tr>
-            <td>Ethernet Termination</td>
-            <td>Pro</td>
-            <td>3</td>
-        </tr>
-        <tr>
-            <td>Customer Service</td>
-            <td>Pro</td>
-            <td>7</td>
-        </tr>
-    </table>
-    </center>
+        <table class="skills-table">
+            <thead>
+                <tr>
+                    <th>Technology</th>
+                    <th>Proficiency</th>
+                    <th>Years of Experience</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>HTML/CSS</td>
+                    <td>Beginner</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>JavaScript</td>
+                    <td>Novice</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>Python</td>
+                    <td>Novice</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>Coax Termination</td>
+                    <td>Pro</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>Fiber Termination</td>
+                    <td>Advanced</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Ethernet Termination</td>
+                    <td>Pro</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>Customer Service</td>
+                    <td>Pro</td>
+                    <td>7</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
