--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Information</title>
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-    <center>
+    <div class="container">
         <h2><u>Contact Information</u></h2>
-        <table border="10">
+        <table>
             <tr>
                 <td><strong>Name:</strong></td>
                 <td>Alton Smith II</td>
@@ -26,6 +27,6 @@
                 <td><a href="https://www.linkedin.com/in/alton-smith-ii-92707327b/" target="_blank">View Profile</a></td>
             </tr>
         </table>
-    </center>
+    </div>
 </body>
 </html>
