--- a/demonstrations.html
+++ b/demonstrations.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demonstrations</title>
+    <link rel="stylesheet" href="demonstrations.css">
 </head>
 <body>
-    <center>
-        <h2>Demonstrations</h2>
-        <table border="10">
-            <tr>
-            </tr>
+    <div class="main-container">
+        <h2><u>Demonstrations</u></h2>
+        <table>
             <tr>
                 <td><a href="rock_paper_scissors.py">Rock Paper Scissors</a></td>
             </tr>
@@ -18,6 +17,6 @@
                 <td><a href="adventure_game.py">Basketball Game</a></td>
             </tr>
         </table>
-    </center>
+    </div>
 </body>
 </html>
